Fix showing number of coaches on small departure boards. Clear search box if back button is used on mobile

--- a/web/web-ldb/src/main/resources/META-INF/resources/css/ldbsmall.css
+++ b/web/web-ldb/src/main/resources/META-INF/resources/css/ldbsmall.css
@@ -2,6 +2,18 @@
 
 .ldbCol, .ldbCont { font-size: 80%; }
 .ldbForecast, .ldbSched, .ldbPlat { font-size: 70%; }
+
+.ldb-entbot {
+    clear: both;
+    text-align: center;
+}
+
+.ldbOperator {
+    text-align: right;
+    color: yellow;
+    font-size: 100%;
+}
+
 /* iPhone 3GS */
 @media all and ( max-width: 320px ) {
     .ldbForecast { width: 54px; }
